# Hand-Eye-GUI-Tools

./: .gitignore  README.md  hand-eye-start.sh
src/hand_eye_calibrator/: CMakeLists.txt  README.md  package.xml  setup.py
src/hand_eye_calibrator/config/: c1_three_camera.yaml  default.yaml
src/hand_eye_calibrator/scripts/: collect_dataset_node.py  export_static_tf.py  multicam_calibrator_gui.py  run_calibration.py  validate_tf.py
src/hand_eye_calibrator/src/hand_eye_calibrator/: __init__.py
src/hand_eye_calibrator/src/hand_eye_calibrator/boards/: __init__.py  base.py  charuco.py  chessboard.py
src/hand_eye_calibrator/src/hand_eye_calibrator/core/: __init__.py  io.py  reprojection.py  rotation_average.py  transform.py
src/hand_eye_calibrator/src/hand_eye_calibrator/dataset/: loader.py  schema.py  writer.py
src/hand_eye_calibrator/src/hand_eye_calibrator/gui/: __init__.py  board_panel.py  calibration_panel.py  camera_panel.py  main_window.py  task_panel.py
src/hand_eye_calibrator/src/hand_eye_calibrator/report/: exporter.py  metrics.py  plots.py
src/hand_eye_calibrator/src/hand_eye_calibrator/ros/: board_detection_worker.py  camera_cache.py  tf_reader.py  topic_reader.py
src/hand_eye_calibrator/src/hand_eye_calibrator/solvers/: __init__.py  base.py  camera_to_camera_solver.py  eye_in_hand_solver.py  eye_to_hand_solver.py  nonlinear_refiner.py
src/piper_multicam_calibrator/: CMakeLists.txt  package.xml  setup.py
src/piper_multicam_calibrator/config/: board_charuco.yaml  board_chessboard.yaml  c1_three_camera.yaml
src/piper_multicam_calibrator/scripts/: collect_dataset_node.py  export_static_tf.py  multicam_calibrator_gui.py  run_calibration.py  validate_tf.py
src/piper_multicam_calibrator/src/piper_multicam_calibrator/: __init__.py
src/piper_multicam_calibrator/src/piper_multicam_calibrator/boards/: base.py  charuco.py  (+1 more)
(+28 files in other folders)
